--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container pt-5">
             <div class="text-center mt-5">
                 <img src="/images/ysbr-logo.png" width="50%" />
-                <div class="mt-5 ml-2">FOLLOW US: <img width="22px" src="/images/instagram.svg" /><a href="https://www.instagram.com/ysbr_off/">YSBR</a></div>
+                <div class="mt-5 ml-2">FOLLOW US: <img width="22px" src="/images/instagram.svg" /><a href="https://www.instagram.com/ysbr_off/">YSBR_OFF</a></div>
             </div>
         </div>
     </body>
