--- a/nft.html
+++ b/nft.html
@@ -15,26 +15,26 @@
             </div>
         </div>
         <div class="list container text-center">
-            <ul style="list-style: none">
-                <li class="my-5">
-                    <div class="p-2 questions">• Cos'è un NFT?</div>
+            <ul style="list-style: none; padding-left: 0px">
+                <li class="my-3">
+                    <div class="p-2 questions">Cos'è un NFT?</div>
                     <div class="p-2 answer">NFT è l’acronimo di Non Fungible Token che in italiano significa 'gettone non fungibile' ossia qualcosa di unico. <br> 
                         Ad esempio una criptovaluta può essere scambiata con un’altra criptovaluta mentre un’opera d’arte è unica e non può essere sostituito da altro. 
                         <br> Quindi non è riproducibile.
-                        Un NFT è un contenuto digitale che rappresenta oggetti del mondo reale come opere d’arte, musica, giochi e collezioni di qualsiasi tipo, mentre nel nostro caso è il <br><br><b> TICKET DI PARTECIPAZIONE ALL'EVENTO:  WAKE'N'FUNKY TRIP!</b>
+                        Un NFT è un contenuto digitale che rappresenta oggetti del mondo reale come opere d’arte, musica, giochi e collezioni di qualsiasi tipo, mentre nel nostro caso è il <b> ticket di partecipazione agli eventi</b>
                     </div>
                 </li>
-                <li class="my-5">
-                    <div class="p-2 questions">• PERCHÉ PARLIAMO DI NFT A UNA FESTA DI WAKEBOARD?</div>
+                <li class="my-3">
+                    <div class="p-2 questions">Perchè parliamo di NFT ad una festa?</div>
                     <div class="p-2 answer"> Abbiamo deciso di 'certificare' la partecipazione alla nostra festa tramite questo strumento, quindi ogni partecipante ha diritto a riceverne uno gratuitamente!
-                        Inoltre, uno speciale NFT disegnato dal nostro artista Davide Cavallaro verrà regalato alla vincitrice o al vincitore del contest di wakeboard che si terrà domenica, una vera e propria opera d'arte!</div>
+                        Diversi NFT disegnati dai nostri artisti preferiti verranno regalati ai vincitori dei contest sportivi.</div>
                 </li>
-                <li class="my-5">
-                    <div class="p-2 questions">• PERCHé POSSEDERE QUESTO NFT?</div>
+                <li class="my-3">
+                    <div class="p-2 questions">Perchè possedere questo NFT?</div>
                     <div class="p-2 answer">Se decidete di riscattare gratuitamente l'NFT di WNFT potrete avere accesso a diversi benefit durante le prossime feste organizzate da YSBR.</div>
                 </li>
-                <li class="my-5">
-                    <div class="p-2 questions">• NON MI INTERESSA, POSSO VENDERLO?</div>
+                <li class="my-3">
+                    <div class="p-2 questions">Non mi interessa, posso venderlo?</div>
                     <div class="p-2 answer">Sì, se sapete che alla prossima festa non potrete partecipare, ci sarà sicuramente qualcun altro che sarà interessato ad avere il ticket della vostra prima festa in modo da ricevere i benefit derivanti dal possederlo. Puoi mettere in vendita o trasferire il tuo NFT in maniera autonoma tramite Opensea.</div>
                 </li>
             </ul>
@@ -42,11 +42,11 @@
         <div class="my-10"></div>
         <div class="list container text-center">
             <ul style="list-style: none">
-                <li class="my-5">
-                    <div class="p-2 questions">• COME RICEVERLO?</div>
+                <li class="my-3">
+                    <div class="p-2 questions"> Come riceverlo?</div>
                     <div class="p-2 answer">Per aiutarvi abbiamo preparato una guida su come creare un wallet: <b> tempo di lettura 3 min</b>
-                        <p>Apri la guida su come installare Metamask <a style="text-decoration: underline; font-weight: bold" target="_blank" href="/file/WNFT.pdf">QUI</a>.</p>
-                        <p>PER POTER RICEVERE L'NFT DOVRAI FORNIRCI IL TUO INDIRIZZO WALLET</p>
+                        <p class="mb-3">Per poter ricevere l''NFT dovrai <b>fornirci il tuo inidirizzo wallet</b>. Apri e leggi la guida su come installare Metamask.</p>
+                        <a target="_blank" href="/file/WNFT.pdf"><button class="botton-primary">Leggi la guida</button></a>
                     </div>
                 </li>
             <h4></h4>
