--- a/eventi.html
+++ b/eventi.html
@@ -9,10 +9,14 @@
         
         <script id="replace_with_navbar" src="nav.js"></script>
         <div class="container">
-            <div class="row justify-content-md-center mt-5">
-                <div class="col-12 col-md-6">
-                    <img class="rounded-2 mt-5" width="100%" src="/images/wnft.jpg" />
-                    <div class="mt-5">FOLLOW FOR MORE: <img width="22px" src="/images/instagram.svg" /><a href="https://www.instagram.com/wakenfunkytrip/">WAKENFUNKYTRIP</a></div>
+            <div class="row mt-5">
+                <div class="col-md-3 ">
+                        <img class="rounded-2" width="100%" src="/images/wnft.jpg" />
+                        <a href="https://www.instagram.com/wakenfunkytrip/">WAKENFUNKYTRIP</a>
+                </div>
+                <div class="col-md-3">
+                    <img class="rounded-2" width="100%" src="/images/wnft.jpg" />
+                    <a href="https://www.instagram.com/wakenfunkytrip/">WAKENFUNKYTRIP</a>
                 </div>
             </div>
         </div>
