--- a/eventi.html
+++ b/eventi.html
@@ -9,14 +9,24 @@
         
         <script id="replace_with_navbar" src="nav.js"></script>
         <div class="container">
+            <div class="title pt-5">
+                <h1>I nostri eventi</h1>
+            </div>
             <div class="row mt-5">
                 <div class="col-md-3 ">
-                        <img class="rounded-2" width="100%" src="/images/wnft.jpg" />
-                        <a href="https://www.instagram.com/wakenfunkytrip/">WAKENFUNKYTRIP</a>
-                </div>
-                <div class="col-md-3">
-                    <img class="rounded-2" width="100%" src="/images/wnft.jpg" />
-                    <a href="https://www.instagram.com/wakenfunkytrip/">WAKENFUNKYTRIP</a>
+                    <img class="rounded-2 mb-3" width="100%" src="/images/wnft.jpg" />
+                    <span class="event-details">
+                        <span class="material-symbols-outlined">calendar_month</span>
+                        <p class="text-details">28-5-2022</p>
+                    </span>
+                    <span class="event-details">
+                        <span class="material-symbols-outlined">pin_drop</span>
+                        <p class="text-details">Arona Liquid Park</p>
+                    </span>
+                    <span class="event-details">
+                        <span class="material-symbols-outlined">sports_score</span>
+                        <p class="text-details">Wake Board</p>
+                    </span>
                 </div>
             </div>
         </div>
