--- a/nft.html
+++ b/nft.html
@@ -10,7 +10,7 @@
         <script id="replace_with_navbar" src="nav.js"></script>
         <script src="" async defer></script>
         <div class="container pt-5">
-            <div class="text-center mt-5">
+            <div class="title">
                 <h1>La nostra festa, il tuo NFT</h1>
             </div>
         </div>
