--- a/nft.html
+++ b/nft.html
@@ -18,9 +18,7 @@
             <ul style="list-style: none; padding-left: 0px">
                 <li class="my-3">
                     <div class="p-2 questions">Cos'è un NFT?</div>
-                    <div class="p-2 answer">NFT è l’acronimo di Non Fungible Token che in italiano significa 'gettone non fungibile' ossia qualcosa di unico. <br> 
-                        Ad esempio una criptovaluta può essere scambiata con un’altra criptovaluta mentre un’opera d’arte è unica e non può essere sostituito da altro. 
-                        <br> Quindi non è riproducibile.
+                    <div class="p-2 answer">NFT è l’acronimo di Non Fungible Token che in italiano significa 'gettone non fungibile' ossia qualcosa di unico, quindi che non è riproducibile.
                         Un NFT è un contenuto digitale che rappresenta oggetti del mondo reale come opere d’arte, musica, giochi e collezioni di qualsiasi tipo, mentre nel nostro caso è il <b> ticket di partecipazione agli eventi</b>
                     </div>
                 </li>
