--- a/nav.html
+++ b/nav.html
@@ -6,7 +6,8 @@
       <div>
         <div ms-1>
             <a class="me-5  " href="/eventi.html">EVENTI</a>
-            <a class="ms-5" href="/nft.html">NFT</a></div>
+            <a class="ms-5" href="/nft.html">NFT</a>
+          </div>
       </div>
     </div>
 </nav>
