banner su tutte le pagine

--- a/eventi.html
+++ b/eventi.html
@@ -30,5 +30,8 @@
                 </div>
             </div>
         </div>
+        <div class="banner">
+            <p>YSBR - YESBROOO - YSBR - YESBROOO - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO</p>
+        </div>
     </body>
 </html>
