--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <div class="mt-5 ml-2">FOLLOW US: <img width="22px" src="/images/instagram.svg" /><a href="https://www.instagram.com/ysbr_off/">YSBR_OFF</a></div>
             </div>
         </div>
-        <div class="banner"><p>YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO</p></div>
+        <div class="banner">
+            <p>YSBR - YESBROOO - YSBR - YESBROOO - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO</p>
+        </div>
     </body>
 </html>
