--- a/nft.html
+++ b/nft.html
@@ -47,8 +47,9 @@
                         <a target="_blank" href="/file/WNFT.pdf"><button class="botton-primary">Leggi la guida</button></a>
                     </div>
                 </li>
-            <h4></h4>
-            <p> </p>
+        </div>
+        <div class="banner">
+            <p>YSBR - YESBROOO - YSBR - YESBROOO - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YSBRSTAFF@GMAIL.COM - YSBR_OFF - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO - YSBR - YESBROOO</p>
         </div>
     </body>
 </html>
